add more unit tests to increase code coverage